# Generador_parciales

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
prompts/: README.md  analyst_agent.md  generator_agent.md  grader_agent.md  judge_agent.md
scripts/: README.md  cli.py  compile_exam.py  generate_analytics.py  omr_pipeline.py  schema.sql  supabase_client.py
tests/: test_compile_exam.py
