[project]
name = "generador-parciales"
version = "0.2.0"
description = "Agentic AI system for generating and grading university exams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.4.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "typer>=0.12.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "qrcode[pil]>=7.4.2",
    "pillow>=10.2.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
    "anthropic>=0.30.0",
    "pyzbar>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-Pillow",
]

[project.scripts]
parciales = "scripts.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["N806", "N803"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/cli.py"]
